test/functions/ferguson/type-value-subtype.good
type-value-subtype.chpl:1: error: Subtype queries require two types
